tests/negative/neg_pr116_mixed_named_end.safe
package neg_PR116_Mixed_Named_End

   function broken returns integer
      return 1
   end broken
